--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <div class="auto">
     <h1 class="name">Soham Suvarna</h1>
-    <p class="line">All ideas are contagious viruses.<br></br>
-      Is the desire to stand out an epidemic disease?</p>
+    <p class="line">A student interested in machines and technology.</p>
 
     <div class="links">
       <a href="/about.html">About</a> —
