--- a/faq.html
+++ b/faq.html
@@ -12,8 +12,6 @@
 <body>
   <div class="auto">
     <h1 class="name">FAQ</h1>
-    <i class="line">"All ideas are contagious viruses.<br></br>
-      Is the desire to stand out an epidemic disease?"</i>
 
     <p class="about" style="text-align: left;">
       <b>age:</b>
@@ -28,20 +26,16 @@
       <b>mbti:</b>
       <br>infj<br><br>
 
-      <b>gender & orientation:</b>
-      <br>male // straight<br><br>
-
       <b>location:</b>
       <br>mumbai, maharashtra, india.<br><br>
 
       <b>hobbies:</b>
-      <br>reading, coding, drawing, learning languages, playing the guitar, working out, etc.<br><br>
+      <br>reading, coding, drawing.<br><br>
 
       <b>development:</b>
       <br>i have worked on various projects ranging from discord bots, websites, applications, libraries, and more. i
-      primarily use javascript (react//next.js for websites) but i also try to work around with different languages. i
-      am also fascinated by robots, artificial intelligence and machine learning and try to learn more about them
-      whenever i get the chance to.<br><br>
+      primarily used javascript (react//next.js for websites) for these but i have also tried working around with different languages. i
+      am also fascinated by robots, artificial intelligence and machine learning and try to learn more about them whenever i get the chance to.<br><br>
 
     </p>
   </div>
