--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="All ideas are contagious viruses. Is the desire to stand out an epidemic disease?">
+   <meta name="description" content="A student interested in machines and technology.">
   <title>faq</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -33,7 +33,7 @@
       <br>reading, coding, drawing.<br><br>
 
       <b>development:</b>
-      <br>i have worked on various projects ranging from discord bots, websites, applications, libraries, and more. i
+      <br>i have worked on various projects ranging from discord bots, websites, applications, frameworks, and more. i
       primarily used javascript (react//next.js for websites) for these but i have also tried working around with different languages. i
       am also fascinated by robots, artificial intelligence and machine learning and try to learn more about them whenever i get the chance to.<br><br>
 
