--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="All ideas are contagious viruses. Is the desire to stand out an epidemic disease?">
+   <meta name="description" content="A student interested in machines and technology.">
   <title>Soham Suvarna</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
