--- a/about.html
+++ b/about.html
@@ -15,11 +15,7 @@
     <i class="line">"All ideas are contagious viruses.<br></br>
       Is the desire to stand out an epidemic disease?"</i>
 
-    <p class="about">Soham Suvarna is a high-school student and also a developer. He is interested in all things about
-      Robots, Artificial Intelligence and Machine Learning. Robots can be fascinating, and he found out about this when
-      he tried building his first robot in early 2019. Later on, he went forward to work on various projects like
-      Discord Bots, Websites, Applications, Libraries, and more. Apart from this, he is also a huge fan of the game
-      Detroit: Become Human and can often be found putting in random references related to it.</p>
+    <p class="about">Soham Suvarna is a high school student and also a developer. He is highly interested in machines and technology. He has been coding since 2019 and has worked on multiple projects like Discord Bots, NPM Packages, Websites and Apps.</p>
   </div>
 </body>
 
